# C-Cpp-DevOps

./: .gitignore  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: CONTRIBUTING.md  bug_report.md  feature_request.md  invalid.md
.github/PULL_REQUEST_TEMPLATE/: bug_report_pr.md
C-Cpp-proj/: CMakeLists.txt
C-Cpp-proj/include/: sayHello.h
C-Cpp-proj/src/: main.c
